# die-e

./: .gitignore  Cargo.toml  LICENSE  README.md  config-example.toml  config.json  config.toml  environment.yml  perf.txt
.cargo/: config.toml
benches/: my_benchmark.rs
src/: base.rs  lib.rs  main.rs  versus.rs
src/alphazero/: alpha_no_parallel.rs  alpha_parallel.rs  alpha_versus.rs  alphazero.rs  encoding.rs  mod.rs  nnet.rs  old_encoding.rs
src/backgammon/: backgammon_logic.rs  encoding.rs  mod.rs
src/mcts/: alpha_mcts.rs  mcts.rs  mcts_test.rs  mod.rs  node.rs  node_store.rs  noise.rs  simple_mcts.rs  utils.rs
src/tictactoe/: mod.rs  tictactoe_test.rs
tests/: backgammon_test.rs  encoding_test.proptest-regressions  encoding_test.rs  mcts_test.rs  tictactoe_test.rs
