[package]
name = "die-e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
# tch = "0.13.0"
indicatif = { version = "*", features = ["rayon"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.85"
nanoid = "0.4.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
