[package]
name = "die-e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tch = "0.13.0"
indicatif = { version = "*", features = ["rayon"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.85"
nanoid = "0.4.0"
rayon = "1.6.1"
arrayvec = "0.7.4"
itertools = "0.11.0"
lazy_static = "1.4"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
proptest = "1.0"
test-case = "3.1.0"

[[bench]]
name = "my_benchmark"
harness = false
